--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -66,8 +66,8 @@
 		<div class="space"><hr></div>
 		<div class="row">
 	
-			<div id="contactinfo1" class="col-sm-12">801.525.0556 | 300 WAKARA WAY, SALT LAKE CITY, UT 84108</div>
-			<div id="contactinfo2" class="col-sm-12">Copyright &copy2016 Red Butte Garden</div>	
+			<div id="contactinfo1" class="col-sm-12"><a href="mailto:email@motobasics.com">email@motobasics.com</a></div>
+			<div id="contactinfo2" class="col-sm-12">Copyright &copy2016 MotoBasics</div>	
 	
 		</div>
 		<div class="space"><hr></div>
