--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -20,9 +20,9 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans" /> <!-- Font 'Open Sans' Hosted by Google -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/jssor.slider.mini.js"></script>
-  <link rel="stylesheet" href="/CSS/summer.css"> <!-- Additional local CSS -->
+  <link rel="stylesheet" href="/CSS/motobasics.css"> <!-- Additional local CSS -->
   
 </head>
 <body>
@@ -31,7 +31,7 @@
 
 
 <!-- Begin Content -->
-<div id="rbghomebody" class="container-fluid">
+<div id="mbhomebody" class="container-fluid">
   <div class="row">
   	  <div class="col-sm-12">
   	  
