more homepage tests

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div id="prefooterbg">
+<div id="prefootemb">
 	
 	<div id="prefooter" class="container">
 	
@@ -14,9 +14,9 @@
 	
 </div>
 
-<div id="rbgfooterbg">
+<div id="mbfootemb">
 
-	<div id="rbgfooter" class="container">
+	<div id="mbfooter" class="container">
 	
 			<br />
 	
@@ -39,7 +39,7 @@
 	
 			<div class="space"><hr></div><div class="space"><hr></div><div class="space"><hr></div>
 			
-			<div id="rbgfooterlinks">
+			<div id="mbfooterlinks">
 				<ul>
 					<li><a href="/contact">CONTACT US</a>&nbsp;&nbsp;&nbsp;&nbsp;<span class="hide-mobile">|</span>&nbsp;&nbsp;&nbsp;</li>
 					<li><a href="#">BOARD</a>&nbsp;&nbsp;&nbsp;&nbsp;<span class="hide-mobile">|</span>&nbsp;&nbsp;&nbsp;</li>
