--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,9 +3,9 @@
 		
 		<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
 
-		  <div id="navbarbg" class="container-fluid">
+		  <div id="navbamb" class="container-fluid">
 		    
-		    <div id="rbgnavbar" class="container-fluid">    
+		    <div id="mbnavbar" class="container-fluid">    
 		    
 				<div class="navbar-header">
 			      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
