--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -11,8 +11,8 @@ h1, h2, h3, h4, h5, h6 {
 
 hr {
 	height: 2px;
-	color: #196143;
-	background-color: #196143;
+	color: #000000;
+	background-color: #000000;
 	border: none;
 	margin-top: 3px;
 	margin-bottom: 3px;
@@ -51,7 +51,7 @@ hr {
 }
 
 .dropdown-menu li:hover {
-	background-color: #F2EDE4;
+	background-color: #A9A9A9;
 	color: #000000;
 }
 
@@ -63,7 +63,7 @@ hr {
 	.navbar-inverse .navbar-toggle:focus, 		/* menu icon background color when it is clicked into */
 	.navbar-inverse .navbar-toggle:hover 		/* menu icon background color when hovered over */
 	{
-	background-color: #196143 !important; /* Overwrites Bootstrap's !important */
+	background-color: #000000 !important; /* Overwrites Bootstrap's !important */
 }
 
 /* Makes headers of the dropdown menus white and bold */
@@ -76,7 +76,7 @@ hr {
 }
 
 .dropdown-menu li:hover {
-	background-color: #F2EDE4;
+	background-color: #A9A9A9;
 }
 
 .dropdown-menu li > a:hover {
@@ -119,7 +119,7 @@ hr {
 
 /* Background color of li in navbar when hovered over */
 .dropdown-menu li > a:hover, .dropdown-menu li > a:focus, .dropdown-submenu:hover > a, .dropdown-menu li:hover {
-	background-color: #F2EDE4;
+	background-color: #A9A9A9;
 }
 
 /* Makes dropdown-menu li links bold*/
@@ -253,7 +253,7 @@ hr {
 #gsa_searchbutton:focus,
 #gsa_searchbutton:hover,
 #gsa_searchbutton:active {
-     background-color:#F2EDE4;
+     background-color:#A9A9A9;
 }
 
 .searchicon {
@@ -478,7 +478,7 @@ hr {
 	}
 	
 	#mbhours, #mbadmission, #mbadmission2, #mbdirections, #mbweather {
-		background-color: #196143;
+		background-color: #000000;
 		border-top: black 1px solid;
 		clear: both;
 		width: 100%;
@@ -716,7 +716,7 @@ hr {
 /*** Begin Pre-Footer ***/
 
 #prefootemb {
-	background-color: #F2EDE4;
+	background-color: #A9A9A9;
 	width: 100%;
 	border-top: 1px solid #000000;
 	border-bottom: 1px solid #2E7258;
@@ -1021,7 +1021,7 @@ hr {
 
 #contactinfo2 {
 	text-align: center;
-	color: #F2EDE4;
+	color: #A9A9A9;
 	font-size: 71%;
 	font-style: italic;
 }
@@ -1081,7 +1081,7 @@ hr {
 	max-width:415px;
 	float: left;
 	width: 100%;
-	background-color: #f2ede4;
+	background-color: #A9A9A9;
 	min-height: 227px;
 	padding: 7px;
 	border-top: 1px solid black;
@@ -1168,7 +1168,7 @@ hr {
 }
 
 .membutton{
-	background-color: #196143;
+	background-color: #000000;
 	color: #FFFFFF;
 	width: 190px;
 	height: 40px;
@@ -1196,7 +1196,7 @@ hr {
 .membenefits  {
 	max-width: 630px;
 	text-align: center;
-	background-color: #196143;
+	background-color: #000000;
 	color: #FFFFFF;
 	height: 100px;
 	margin-left: auto;
@@ -1220,7 +1220,7 @@ hr {
 
 	#membenefits, #mempolicies {
 		max-width: 640px;
-  		background-color: #F2EDE4;
+  		background-color: #A9A9A9;
   		color: #000000;
   		margin-left: auto;
   		margin-right: auto;
@@ -1242,7 +1242,7 @@ hr {
 		opacity: 1;
 		margin-bottom: 4px;
 		padding: 0;
-		background-color: #196143;
+		background-color: #000000;
 	}
 	
 	.memfaq:hover {
@@ -1261,7 +1261,7 @@ hr {
 	}
 	
 	.renewbutton {
-		background-color: #196143;
+		background-color: #000000;
 		color: #FFFFFF;
 		max-width: 325px;
 		min-height: 40px;
@@ -1331,7 +1331,7 @@ hr {
 /* Begin Accordion Panel Colors */
 
 .panel-heading {
-	background-color: #F2EDE4;
+	background-color: #A9A9A9;
 }
 
 
@@ -1672,7 +1672,7 @@ hr {
 .sponinfo {
 	max-width:620px;
 	width: 100%;
-	background-color: #f2ede4;
+	background-color: #A9A9A9;
 	min-height: 340px;
 	padding: 7px;
 	border: 1px solid black;
@@ -1805,7 +1805,7 @@ hr {
 	width: 80%;
 	z-index: 5;
 	bottom: 60px;
-	background-color: #196143;
+	background-color: #000000;
 	padding: 15px;
 }
 
