--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,7 +21,7 @@
 			      <ul class="nav navbar-nav">
 			        
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">VISIT <span class="caret"></span></a>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GETTING STARTED</a>
 			          <ul class="dropdown-menu">
 			            <li><a href="#">GARDEN MAPS</a></li>
 			            <li><a href="#">GIFT SHOP</a></li>
