changes to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
 					<li><a href="/contact">CONTACT US</a>&nbsp;&nbsp;&nbsp;&nbsp;<span class="hide-mobile">|</span>&nbsp;&nbsp;&nbsp;</li>
 					<li><a href="#">PRIVACY POLICY</a>&nbsp;&nbsp;&nbsp;&nbsp;<span class="hide-mobile">|</span>&nbsp;&nbsp;&nbsp;</li>
 					<li><a href="#">TERMS OF USE</a>&nbsp;&nbsp;&nbsp;&nbsp;<span class="hide-mobile">|</span>&nbsp;&nbsp;&nbsp;</li>
-					<li><a href="#">YOUR PRIVACY RIGHTS</a>&nbsp;&nbsp;&nbsp;&nbsp;<span class="hide-mobile">|</span>&nbsp;&nbsp;&nbsp;</li>
+					<li><a href="#">YOUR PRIVACY RIGHTS</a></li>
 				</ul>
 			</div>
 			
