--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,74 +22,26 @@
 			        
 			        <li class="dropdown">
 			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GETTING STARTED</a>
-			          <ul class="dropdown-menu">
-			            <li><a href="#">GARDEN MAPS</a></li>
-			            <li><a href="#">GIFT SHOP</a></li>
-			            <li><a href="#">FREE DAYS<br />& EVENTS</a></li>
-			            <li><a href="#">PRIVATE TOURS</a></li>
-						<li><a href="#">PLAY TALEBLAZER</a></li>
-			            <li><a href="#">POETRY IN <br />THE GARDEN</a></li>
-			          </ul>
 			        </li>
 			        
 					<li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">PLANTS & GARDENS <span class="caret"></span></a>
-			          <ul class="dropdown-menu">
-			            <li><a href="#">OUR GARDENS</a></li>
-			            <li><a href="#">PLANT COLLECTIONS</a></li>
-			            <li><a href="#">WHAT'S BLOOMING<br /> NOW BLOG</a></li>
-			            <li><a href="#">CONSERVATION<br />RESEARCH</a></li>
-			            <li><a href="#">GARDENING IN UTAH</a></li>
-			          </ul>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">PLANTS & GARDENS</a>
 			        </li>
 					
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">EVENTS <span class="caret"></span></a>
-			          <ul class="dropdown-menu">
-			            <li><a href="/spring">SPRING</a></li>
-			            <li><a href="/summer">SUMMER</a></li>
-			            <li><a href="/fall">FALL</a></li>
-			            <li><a href="/winter">WINTER</a></li>
-			            <li><a href="#">EVENT CALENDAR</a></li>
-			          </ul>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">EVENTS</a>
 			        </li>
 					
 					<li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">EDUCATION <span class="caret"></span></a>
-			          <ul class="dropdown-menu">
-			            <li><a href="#">WORKSHOPS & CLASSES</a></li>
-			            <li><a href="#">TOURS</a></li>
-			            <li><a href="#">LECTURES</a></li>
-				        <li><a href="#">KID'S CLASSES</a></li>
-			            <li><a href="#">SUMMER CAMP</a></li>
-			            <li><a href="#">TEACHERS & STUDENTS</a></li>
-			          </ul>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">EDUCATION</a>
 			        </li>
 			        
 					<li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GET INVOLVED <span class="caret"></span></a>
-			          <ul class="dropdown-menu">
-			            <li><a href="#">ABOUT US</a></li>
-			            <li><a href="#">MEMBERSHIP</a></li>
-			            <li><a href="#">VOLUNTEER</a></li>
-			            <li><a href="#">GIVE</a></li>
-			            <li><a href="#">CURRENT FUNDRAISERS</a></li>
-			            <li><a href="#">CORPORATE <br />SPONSORSHIP</a></li>
-			          </ul>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GET INVOLVED</a>
 			        </li>
 		
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">PRIVATE EVENTS <span class="caret"></span></a>
-			          <ul class="dropdown-menu">
-			            <li><a href="#">RENTAL RATES</a></li>
-			            <li><a href="#">WEDDINGS<br />& RECEPTIONS</a></li>
-			            <li><a href="#">CORPORATE EVENTS <br />& PRIVATE PARTIES</a></li>
-			            <li><a href="#">RENTAL SITES</a></li>
-			            <li><a href="#">CATERERS</a></li>
-			            <li><a href="#">RENTAL CALENDAR</a></li>
-			            <li><a href="#">PHOTOGRAPHY<br />POLICY</a></li>
-			            <li><a href="#">BIRTHDAY PARTIES</a></li>
-			          </ul>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">PRIVATE EVENTS</a>
 			        </li>
 			     
 			      </ul>
