changes to navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -25,19 +25,23 @@
 			        </li>
 			        
 					<li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">PLANTS & GARDENS</a>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GEAR INFO</a>
 			        </li>
 					
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">EVENTS</a>
-			        </li>
-					
-					<li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">EDUCATION</a>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">BUYING AND SELLING</a>
 			        </li>
 			        
 					<li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GET INVOLVED</a>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">BASIC CONTROLS</a>
+			        </li>
+			        
+			        <li class="dropdown">
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">BASIC CONTROLS</a>
+			        </li>
+			        
+					<li class="dropdown">
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">ACCESSORIES</a>
 			        </li>
 		
 			        <li class="dropdown">
