changes to navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -33,19 +33,27 @@
 			        </li>
 			        
 					<li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">BASIC CONTROLS</a>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTROLS AND SPECS</a>
 			        </li>
 			        
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">BASIC CONTROLS</a>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">SAFETY</a>
 			        </li>
 			        
 					<li class="dropdown">
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">MAINTENANCE</a>
+			        </li>
+			        
+			        <li class="dropdown">
 			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">ACCESSORIES</a>
 			        </li>
 		
 			        <li class="dropdown">
 			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">PRIVATE EVENTS</a>
+			        </li>
+			        
+			        <li class="dropdown">
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">RESOURCES</a>
 			        </li>
 			     
 			      </ul>
