--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,19 +21,19 @@
 			      <ul class="nav navbar-nav">
 			        
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GETTING STARTED</a>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GETTING<br />STARTED</a>
 			        </li>
 			        
 					<li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GEAR INFO</a>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GEAR<br />INFO</a>
 			        </li>
 					
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">BUYING AND SELLING</a>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">BUYING &amp;<br />SELLING</a>
 			        </li>
 			        
 					<li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTROLS AND SPECS</a>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTROLS<br />&amp; SPECS</a>
 			        </li>
 			        
 			        <li class="dropdown">
@@ -46,10 +46,6 @@
 			        
 			        <li class="dropdown">
 			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">ACCESSORIES</a>
-			        </li>
-		
-			        <li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">PRIVATE EVENTS</a>
 			        </li>
 			        
 			        <li class="dropdown">
