--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -29,11 +29,11 @@
 			        </li>
 					
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">BUYING &amp;<br />SELLING</a>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">BUYING &<br />SELLING</a>
 			        </li>
 			        
 					<li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTROLS<br />&amp; SPECS</a>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTROLS<br />& SPECS</a>
 			        </li>
 			        
 			        <li class="dropdown">
