--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,19 +21,19 @@
 			      <ul class="nav navbar-nav">
 			        
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GETTING<br />STARTED</a>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GETTING STARTED</a>
 			        </li>
 			        
 					<li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GEAR<br />INFO</a>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GEAR INFO</a>
 			        </li>
 					
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">BUYING &<br />SELLING</a>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">BUYING & SELLING</a>
 			        </li>
 			        
 					<li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTROLS<br />& SPECS</a>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTROLS & SPECS</a>
 			        </li>
 			        
 			        <li class="dropdown">
