--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -32,6 +32,10 @@ hr {
 	color: #C4B59E;		/* color when hyperlinks hovered over on default pages*/ 
 }
 
+.logo {
+	max-width: 100px;
+}
+
 /*******************************************/
 /************** Begin Nav Bar **************/
 /*******************************************/
