--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -32,7 +32,7 @@ hr {
 	color: #C4B59E;		/* color when hyperlinks hovered over on default pages*/ 
 }
 
-.logo {
+.logo img {
 	max-width: 100px;
 }
 
