--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -43,6 +43,7 @@ hr {
 .navbar-wrapper {
 	position: absolute;
 	width: 100%;
+	max-height: 150px;
 }
 
 /* Fixes rounded corners issue in Bootstrap navbar */
