adding search icon

--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -36,6 +36,10 @@ hr {
 	max-width: 125px;
 }
 
+.searchicon img {
+	max-width: 48px;
+}
+
 /*******************************************/
 /************** Begin Nav Bar **************/
 /*******************************************/
