--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -40,6 +40,10 @@ hr {
 	max-width: 32px;
 }
 
+.searchicon:hover {
+	background-color: #FF0000;
+}
+
 /*******************************************/
 /************** Begin Nav Bar **************/
 /*******************************************/
