--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -149,7 +149,7 @@ hr {
 	max-width: 1400px;
 	margin-left:auto;
 	margin-right:auto;
-	background-color:#000000;
+	background-color:green;
 }
 
 .nav-button {
