--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -235,7 +235,7 @@ hr {
 	 #mbdefaultbody {
 		margin-top: -65px;
 	    position: relative;
-	    clear: both;
+	    clear: right;
 	 }
 
 }
@@ -268,7 +268,7 @@ hr {
 #mbdefaultbody {
 	max-width:1280px;
 	clear: both;
-	position: relative;
+	position: absolute;
 	float: none;
 	padding: 65px 15px 15px 15px;
 }
