--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -45,6 +45,10 @@ hr {
 	background-color: #FF0000;
 }
 
+.body {
+	padding-top: 200px;
+}
+
 /*******************************************/
 /************** Begin Nav Bar **************/
 /*******************************************/
