--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -36,11 +36,14 @@ hr {
 	max-width: 150px;
 }
 
+.searchicon {
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
 .searchicon img {
 	max-width: 28px;
 	margin-top: 11px;
-	padding-left: 15px;
-	padding-right: 15px;
 }
 
 .searchicon img:hover {
