--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -156,7 +156,7 @@ hr {
 	margin-left:auto;
 	margin-right:auto;
 	background-color:#000000;
-	position: absolute;
+	position: relative;
 }
 
 .nav-button {
