--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="/CSS/motobasics.css"> <!-- Additional local CSS -->
   
 </head>
+<body>
 {% include navbar.html %}
 
 <div id="rbgdefaultbody" class="container-fluid">
@@ -36,4 +37,5 @@
     </div>
   </div>
 </div>
+</body>
 {% include footer.html %}
