--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -36,6 +36,10 @@ hr {
 	max-width: 150px;
 }
 
+.logo img:hover {
+    box-shadow: 0px 0px 5px #fff;
+}
+
 .searchicon img {
 	max-width: 28px;
 	margin-top: 11px;
@@ -156,7 +160,6 @@ hr {
 	margin-left:auto;
 	margin-right:auto;
 	background-color:#000000;
-	position: relative;
 }
 
 .nav-button {
