--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 <body>
 {% include navbar.html %}
 
-<div id="rbgdefaultbody" class="container-fluid">
+<div id="mbdefaultbody" class="container-fluid">
   <div class="row">
   	  <div class="col-sm-12">
   	  	<div class="container-fluid">
