--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -43,6 +43,10 @@ hr {
 	margin-right: 15px;
 }
 
+.searchicon img:hover {
+	background-color: red;
+}
+
 /*******************************************/
 /************** Begin Nav Bar **************/
 /*******************************************/
