--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -298,7 +298,7 @@ hr {
 }
 
 #mbfooterlinks a:hover {
-	color: #C4B59E;
+	text-shadow: 1px 0px 20px #FFFFFF; /* glow color when hyperlinks hovered over on default pages*/
 }
 
 #social-media-wrapper {
