--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -299,6 +299,7 @@ hr {
 
 #mbfooterlinks a:hover {
 	text-shadow: 1px 0px 20px #FFFFFF; /* glow color when hyperlinks hovered over on default pages*/
+	text-decoration: underline;
 }
 
 #social-media-wrapper {
