--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -126,7 +126,7 @@ hr {
 }
 
 #mbnavbar {
-	max-width: 1400px;
+	max-width: 100%;
 	margin-left:auto;
 	margin-right:auto;
 	background-color:#000000;
