--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -47,6 +47,11 @@ hr {
 	background-color: red;
 }
 
+#myNavbar {
+	margin-left: auto;
+	margin-right: auto;
+}
+
 /*******************************************/
 /************** Begin Nav Bar **************/
 /*******************************************/
