--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,7 +16,7 @@
 			      <a class="pull-left" href="/index"><div class="responsive hover logo"><img src="../images/logo.png"></div></a>
 			    </div>
 			    
-			    <div class="collapse navbar-collapse pull-right" id="myNavbar">
+			    <div class="collapse navbar-collapse center-block" id="myNavbar">
 			      
 			      <ul class="nav navbar-nav">
 			        
