--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,7 +16,7 @@
 			      <a class="pull-left" href="/index"><div class="responsive hover logo"><img src="../images/logo.png"></div></a>
 			    </div>
 			    
-			    <div class="collapse navbar-collapse center-block" id="myNavbar">
+			    <div class="collapse navbar-collapse text-center" id="myNavbar">
 			      
 			      <ul class="nav navbar-nav">
 			        
@@ -54,13 +54,15 @@
 			     
 			      </ul>
 			     
-			     <div>
+			     <div class="pull-right">
 				     
-				    <div class="searchicon"><img src="../images/search.png"></div>
+				    <div class="searchicon">
+				    	<img src="../images/search.png">
+				    </div>
 					 	     
-					 <div class="nav-button-wrapper">
-     
-					 </div>
+					<div class="nav-button-wrapper">
+						
+					</div>
 					 
 			     </div>
 			     
