--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -2,6 +2,7 @@
         
 html * {
      font-family: 'Open Sans';
+     font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
