--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -29,7 +29,7 @@ hr {
 }
 
 #mbdefaultbody a:hover {		 
-	text-shadow: 1px 0px 20px #FFFF00; /* glow color when hyperlinks hovered over on default pages*/
+	text-shadow: 1px 0px 20px #FF0000; /* glow color when hyperlinks hovered over on default pages*/
 }
 
 .logo img {
@@ -303,7 +303,7 @@ hr {
 }
 
 #mbfooterlinks a:hover, #contactinfo1 a:hover {
-	text-shadow: 1px 0px 20px #FFFFFF; /* glow color when hyperlinks hovered over on default pages*/
+	text-shadow: 1px 0px 20px #FFFF00; /* glow color when hyperlinks hovered over on default pages*/
 	text-decoration: underline;
 }
 
