--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <!-- Begin Navbar -->
-<div class="navbar-wrapper">
+<div class="navbar-wrapper row-fluid">
 		
 		<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
 
@@ -7,7 +7,7 @@
 		    
 		    <div id="mbnavbar" class="container-fluid">    
 		    
-				<div class="navbar-header">
+				<div class="navbar-header col-lg-3">
 			      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
@@ -18,7 +18,7 @@
 			    
 			    <div class="collapse navbar-collapse text-center" id="myNavbar">
 			      
-			      <ul class="nav navbar-nav">
+			      <ul class="nav navbar-nav col-lg-9">
 			        
 			        <li class="dropdown">
 			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GETTING STARTED</a>
@@ -54,7 +54,7 @@
 			     
 			      </ul>
 			     
-			     <div class="pull-right">
+			     <div class="pull-right col-lg-3">
 				     
 				    <div class="searchicon">
 				    	<img src="../images/search.png">
