--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <!-- Begin Navbar -->
-<div class="navbar-wrapper row-fluid">
+<div class="navbar-wrapper">
 		
 		<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
 
@@ -7,7 +7,9 @@
 		    
 		    <div id="mbnavbar" class="container-fluid">    
 		    
-				<div class="navbar-header col-lg-3">
+		    <div class="row-fluid">
+		    
+				<div class="navbar-header col-xs-3">
 			      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
@@ -16,9 +18,9 @@
 			      <a class="pull-left" href="/index"><div class="responsive hover logo"><img src="../images/logo.png"></div></a>
 			    </div>
 			    
-			    <div class="collapse navbar-collapse text-center" id="myNavbar">
+			    <div class="collapse navbar-collapse text-center col-xs-9" id="myNavbar">
 			      
-			      <ul class="nav navbar-nav col-lg-9">
+			      <ul class="nav navbar-nav">
 			        
 			        <li class="dropdown">
 			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GETTING STARTED</a>
@@ -54,7 +56,7 @@
 			     
 			      </ul>
 			     
-			     <div class="pull-right col-lg-3">
+			     <div class="pull-right col-xs-3">
 				     
 				    <div class="searchicon">
 				    	<img src="../images/search.png">
