--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,7 +9,7 @@
 		    
 		    <div class="row-fluid">
 		    
-				<div class="navbar-header col-xs-3">
+				<div class="navbar-header col-lg-3">
 			      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
@@ -18,7 +18,7 @@
 			      <a class="pull-left" href="/index"><div class="responsive hover logo"><img src="../images/logo.png"></div></a>
 			    </div>
 			    
-			    <div class="collapse navbar-collapse text-center col-xs-9" id="myNavbar">
+			    <div class="collapse navbar-collapse text-center col-lg-9" id="myNavbar">
 			      
 			      <ul class="nav navbar-nav">
 			        
@@ -56,7 +56,7 @@
 			     
 			      </ul>
 			     
-			     <div class="pull-right col-xs-3">
+			     <div class="pull-right col-lg-3">
 				     
 				    <div class="searchicon">
 				    	<img src="../images/search.png">
