--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,9 +7,7 @@
 		    
 		    <div id="mbnavbar" class="container-fluid">    
 		    
-		    <div class="row-fluid">
-		    
-				<div class="navbar-header col-lg-3">
+				<div class="navbar-header">
 			      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
@@ -18,7 +16,7 @@
 			      <a class="pull-left" href="/index"><div class="responsive hover logo"><img src="../images/logo.png"></div></a>
 			    </div>
 			    
-			    <div class="collapse navbar-collapse text-center col-lg-9" id="myNavbar">
+			    <div class="collapse navbar-collapse text-center" id="myNavbar">
 			      
 			      <ul class="nav navbar-nav">
 			        
@@ -56,7 +54,7 @@
 			     
 			      </ul>
 			     
-			     <div class="pull-right col-lg-3">
+			     <div class="pull-right">
 				     
 				    <div class="searchicon">
 				    	<img src="../images/search.png">
@@ -70,7 +68,6 @@
 			     
 			    </div>
 		    
-		    </div>
 		    </div>
 		      
 		  </div>
