--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -57,7 +57,7 @@
 					    </div>
 				    </div>
 				     
-				    <div class="col-sm-3">
+				    <div class="col-lg-3">
 					    <div class="pull-right">
 						     
 						    <div class="searchicon">
