--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,7 +7,7 @@
 		    
 		    <div id="mbnavbar" class="container-fluid">    
 		    
-		    	<div class="row-fluid">
+		    	<div class="row">
 		    	
 		    		<div class="col-lg-3">
 						<div class="navbar-header">
