--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,7 +11,7 @@
 		    	
 		    		<div class="col-lg-3">
 						<div class="navbar-header">
-					      <a class="pull-left" href="/index"><div class="responsive hover logo"><img src="../images/logo.png"></div></a>
+					      <a  href="/index"><div class="responsive hover logo"><img src="../images/logo.png"></div></a>
 					    </div>
 		    		</div>
 				    
@@ -58,7 +58,7 @@
 				    </div>
 				     
 				    <div class="col-lg-3">
-					    <div class="pull-right">
+
 						     
 						    <div class="searchicon">
 						    	<img src="../images/search.png">
@@ -68,7 +68,7 @@
 								
 							</div>
 							 
-					    </div>
+
 				    </div>
 				    
 		    	</div>
