--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,71 +7,66 @@
 		    
 		    <div id="mbnavbar" class="container-fluid">    
 		    
-		    	<div class="row">
-		    	
-		    		<div class="col-lg-3">
-						<div class="navbar-header">
-					      <a  href="/index"><div class="responsive hover logo"><img src="../images/logo.png"></div></a>
-					    </div>
-		    		</div>
-				    
-				    <div class="col-lg-9">
-					    <div class="collapse navbar-collapse text-center" id="myNavbar">
-					      
-					      <ul class="nav navbar-nav">
-					        
-					        <li class="dropdown">
-					          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GETTING STARTED</a>
-					        </li>
-					        
-							<li class="dropdown">
-					          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GEAR INFO</a>
-					        </li>
-							
-					        <li class="dropdown">
-					          <a class="dropdown-toggle" data-toggle="dropdown" href="#">BUYING & SELLING</a>
-					        </li>
-					        
-							<li class="dropdown">
-					          <a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTROLS & SPECS</a>
-					        </li>
-					        
-					        <li class="dropdown">
-					          <a class="dropdown-toggle" data-toggle="dropdown" href="#">SAFETY</a>
-					        </li>
-					        
-							<li class="dropdown">
-					          <a class="dropdown-toggle" data-toggle="dropdown" href="#">MAINTENANCE</a>
-					        </li>
-					        
-					        <li class="dropdown">
-					          <a class="dropdown-toggle" data-toggle="dropdown" href="#">ACCESSORIES</a>
-					        </li>
-					        
-					        <li class="dropdown">
-					          <a class="dropdown-toggle" data-toggle="dropdown" href="#">RESOURCES</a>
-					        </li>
-					     
-					      </ul>
-					      
-					    </div>
-				    </div>
+				<div class="navbar-header">
+			      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>                        
+			      </button>
+			      <a class="pull-left" href="/index"><div class="responsive hover logo"><img src="../images/logo.png"></div></a>
+			    </div>
+			    
+			    <div class="collapse navbar-collapse text-center" id="myNavbar">
+			      
+			      <ul class="nav navbar-nav">
+			        
+			        <li class="dropdown">
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GETTING STARTED</a>
+			        </li>
+			        
+					<li class="dropdown">
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GEAR INFO</a>
+			        </li>
+					
+			        <li class="dropdown">
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">BUYING & SELLING</a>
+			        </li>
+			        
+					<li class="dropdown">
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTROLS & SPECS</a>
+			        </li>
+			        
+			        <li class="dropdown">
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">SAFETY</a>
+			        </li>
+			        
+					<li class="dropdown">
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">MAINTENANCE</a>
+			        </li>
+			        
+			        <li class="dropdown">
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">ACCESSORIES</a>
+			        </li>
+			        
+			        <li class="dropdown">
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">RESOURCES</a>
+			        </li>
+			     
+			      </ul>
+			     
+			     <div class="pull-right">
 				     
-				    <div class="col-lg-3">
-
-						     
-						    <div class="searchicon">
-						    	<img src="../images/search.png">
-						    </div>
-							 	     
-							<div class="nav-button-wrapper">
-								
-							</div>
-							 
-
+				    <div class="searchicon">
+				    	<img src="../images/search.png">
 				    </div>
-				    
-		    	</div>
+					 	     
+					<div class="nav-button-wrapper">
+						
+					</div>
+					 
+			     </div>
+			     
+			    </div>
 		    
 		    </div>
 		      
