--- a/CSS/motobasics.css
+++ b/CSS/motobasics.css
@@ -459,7 +459,7 @@ hr {
 	bottom: 60px;
 	background-color: #000000;
 	padding: 15px;
-	text-transform: capitalize;
+	text-transform: uppercase;
 }
 
 .postname {
