post grid testing

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,7 +21,7 @@
 			      <ul class="nav navbar-nav">
 			        
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="/getting-started.html">GETTING STARTED</a>
+			          <a class="dropdown-toggle" data-toggle="dropdown" href="/getting-started">GETTING STARTED</a>
 			        </li>
 			        
 					<li class="dropdown">
