post grid testing

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -25,31 +25,31 @@
 			        </li>
 			        
 					<li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">GEAR INFO</a>
+			          <a class="dropdown-toggle" href="#">GEAR INFO</a>
 			        </li>
 					
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">BUYING & SELLING</a>
+			          <a class="dropdown-toggle" href="#">BUYING & SELLING</a>
 			        </li>
 			        
 					<li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">CONTROLS & SPECS</a>
+			          <a class="dropdown-toggle" href="#">CONTROLS & SPECS</a>
 			        </li>
 			        
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">SAFETY</a>
+			          <a class="dropdown-toggle" href="#">SAFETY</a>
 			        </li>
 			        
 					<li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">MAINTENANCE</a>
+			          <a class="dropdown-toggle" href="#">MAINTENANCE</a>
 			        </li>
 			        
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">ACCESSORIES</a>
+			          <a class="dropdown-toggle" href="#">ACCESSORIES</a>
 			        </li>
 			        
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" data-toggle="dropdown" href="#">RESOURCES</a>
+			          <a class="dropdown-toggle" href="#">RESOURCES</a>
 			        </li>
 			     
 			      </ul>
