--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,9 @@
     <!-- Chrome, Firefox OS, Opera and Vivaldi -->
 	<meta name="theme-color" content="#196143">
 	<!-- Windows Phone -->
-	<meta name="msapplication-navbutton-color" content="#196143">
+	<meta name="msapplication-navbutton-color" content="#FF0000">
 	<!-- iOS Safari -->
-	<meta name="apple-mobile-web-app-status-bar-style" content="#196143">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#FF0000">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
