--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -25,7 +25,7 @@
 			        </li>
 			        
 					<li class="dropdown">
-			          <a class="dropdown-toggle" href="#">GEAR INFO</a>
+			          <a class="dropdown-toggle" href="/gear-info">GEAR INFO</a>
 			        </li>
 					
 			        <li class="dropdown">
