adding pages and updating navbar links

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -29,27 +29,27 @@
 			        </li>
 					
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" href="#">BUYING & SELLING</a>
+			          <a class="dropdown-toggle" href="/buying-and-selling">BUYING & SELLING</a>
 			        </li>
 			        
 					<li class="dropdown">
-			          <a class="dropdown-toggle" href="#">CONTROLS & SPECS</a>
+			          <a class="dropdown-toggle" href="/controls-and-specs">CONTROLS & SPECS</a>
 			        </li>
 			        
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" href="#">SAFETY</a>
+			          <a class="dropdown-toggle" href="/safety">SAFETY</a>
 			        </li>
 			        
 					<li class="dropdown">
-			          <a class="dropdown-toggle" href="#">MAINTENANCE</a>
+			          <a class="dropdown-toggle" href="/maintenance">MAINTENANCE</a>
 			        </li>
 			        
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" href="#">ACCESSORIES</a>
+			          <a class="dropdown-toggle" href="/accessories">ACCESSORIES</a>
 			        </li>
 			        
 			        <li class="dropdown">
-			          <a class="dropdown-toggle" href="#">RESOURCES</a>
+			          <a class="dropdown-toggle" href="/resources">RESOURCES</a>
 			        </li>
 			     
 			      </ul>
