--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,7 +13,7 @@
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>                        
 			      </button>
-			      <a class="pull-left" href="/index"><div class="responsive hover logo"><img src="../images/logo.png"></div></a>
+			      <a class="pull-left" href="/index"><div class="responsive hover logo"><img src="/images/logo.png"></div></a>
 			    </div>
 			    
 			    <div class="collapse navbar-collapse text-center" id="myNavbar">
@@ -57,7 +57,7 @@
 			     <div class="pull-right">
 				     
 				    <div class="searchicon">
-				    	<img src="../images/search.png">
+				    	<img src="/images/search.png">
 				    </div>
 					 	     
 					<div class="nav-button-wrapper">
