--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@
   <div class="row">
         
         <div style="inline-block"><img src="/images/post-images/{{ page.post-image }}" alt="{{ page.title }}" style="max-width: 200px;height:auto;"/></div>
-        <div style="inline-block"><h1>{{ page.title }}</h1></div>
+        <div style="inline-block"><p>{{ page.title }}</p></div>
         <hr />
         <br />
         	
