--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,6 +38,18 @@
 			<div style="inline-block"><p class="uppercase">{{ page.title }}</p></div>
         </div>
         
+        <div>
+   
+		    <div style="display:inline-block;">
+		    	<img src="/images/sig-stamp.png" />
+			</div>    
+			
+			<div style="display:inline-block;">
+				<p><strong>Sean</strong> - 	<em>Co-Creator and Administrator of MotoBasics.com</em></p>
+			</div>
+
+		</div>
+        
         <hr />
         <br />	
         
