--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,22 +33,15 @@
   <div class="row">
         
         <div>
-        	<div style="inline-block"><img src="/images/post-images/{{ page.post-image }}" alt="{{ page.title }}" style="max-width: 200px;height:auto;"/></div>
+        	<div style="display:inline-block;">
+        		<img src="/images/post-images/{{ page.post-image }}" alt="{{ page.title }}" style="max-width: 200px;height:auto;"/>
+        	</div>
         
-			<div style="inline-block"><p class="uppercase">{{ page.title }}</p></div>
-        </div>
-        
-        <div>
-   
-		    <div style="display:inline-block;">
-		    	<img src="/images/sig-stamp.png" />
-			</div>    
-			
 			<div style="display:inline-block;">
-				<p><strong>Sean</strong> - 	<em>Co-Creator and Administrator of MotoBasics.com</em></p>
+				<p class="uppercase">{{ page.title }}</p>
 			</div>
-
-		</div>
+        
+        </div>
         
         <hr />
         <br />	
