--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,12 +33,13 @@
   <div class="row">
         
         <div>
+        
         	<div style="display:inline-block;">
         		<img src="/images/post-images/{{ page.post-image }}" alt="{{ page.title }}" style="max-width: 200px;height:auto;"/>
         	</div>
         
 			<div style="display:inline-block;">
-				<p class="uppercase">{{ page.title }}</p>
+				<p class="caps title">{{ page.title }}</p>
 			</div>
         
         </div>
