second commit for test

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
 		<div class="row">
 
 			<div id="contactinfo1" class="col-sm-12"><a href="mailto:email@kushbasics.com">email@kushbasics.com</a></div>
-			<div id="contactinfo2" class="col-sm-12">Copyright &amp;copy2017 KushBasics</div>
+			<div id="contactinfo2" class="col-sm-12">Copyright &copy;2017 KushBasics</div>
 
 		</div>
 		<div class="space"><hr></div>
