--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,77 +1,77 @@
 <!-- Begin Navbar -->
 <div class="navbar-wrapper">
-		
+
 		<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
 
 		  <div id="navbamb" class="container-fluid">
-		    
-		    <div id="mbnavbar" class="container-fluid">    
-		    
+
+		    <div id="mbnavbar" class="container-fluid">
+
 				<div class="navbar-header">
 			      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>                        
+			        <span class="icon-bar"></span>
 			      </button>
-			      <a class="pull-left" href="/index"><div class="responsive hover logo"><img src="/images/logo.png"></div></a>
+			      <a class="pull-left" href="/index"><div class="responsive hover logo"><img src="/images/.png"></div></a>
 			    </div>
-			    
+
 			    <div class="collapse navbar-collapse text-center" id="myNavbar">
-			      
+
 			      <ul class="nav navbar-nav">
-			        
+
 			        <li class="dropdown">
 			          <a class="dropdown-toggle" href="/getting-started">GETTING STARTED</a>
 			        </li>
-			        
+
 					<li class="dropdown">
 			          <a class="dropdown-toggle" href="/gear-info">GEAR INFO</a>
 			        </li>
-					
+
 			        <li class="dropdown">
 			          <a class="dropdown-toggle" href="/buying-and-selling">BUYING & SELLING</a>
 			        </li>
-			        
+
 					<li class="dropdown">
 			          <a class="dropdown-toggle" href="/controls-and-specs">CONTROLS & SPECS</a>
 			        </li>
-			        
+
 			        <li class="dropdown">
 			          <a class="dropdown-toggle" href="/safety">SAFETY</a>
 			        </li>
-			        
+
 					<li class="dropdown">
 			          <a class="dropdown-toggle" href="/maintenance">MAINTENANCE</a>
 			        </li>
-			        
+
 			        <li class="dropdown">
 			          <a class="dropdown-toggle" href="/accessories">ACCESSORIES</a>
 			        </li>
-			        
+
 			        <li class="dropdown">
 			          <a class="dropdown-toggle" href="/resources">RESOURCES</a>
 			        </li>
-			     
+
 			      </ul>
-			     
+
 			     <div class="pull-right">
-				     
+
 				    <div class="searchicon">
 				    	<img src="/images/search.png">
 				    </div>
-					 	     
+
 					<div class="nav-button-wrapper">
-						
+
 					</div>
-					 
+
 			     </div>
-			     
+
 			    </div>
-		    
+
 		    </div>
-		      
+
 		  </div>
-		  
+
 		</nav>
 </div>
 <!-- End Navbar -->
