--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a id="logo" class="pull-left" href="http://www.kushbasics.com"><img src="images/logo.png" alt="Kush Basics"></a>
+	      <a id="logo" class="pull-left" href="http://www.kushbasics.com"><img src="images/.png" alt="Kush Basics"></a>
 	    </div>
 
 	    <div class="collapse navbar-collapse" id="myNavbar">
